--- a/Train.ipynb
+++ b/Train.ipynb
@@ -198,21 +198,21 @@
      "output_type": "stream",
      "text": [
       "121 64115\n",
-      "36847 4560\n",
+      "35012 3388\n",
       "121 242 240.83625730994152\n"
      ]
     }
    ],
    "source": [
-    "balanced_train_df = balance_dataset(train_df)\n",
+    "balanced_train_df = balance_dataset(train_df, ratio=2)\n",
     "\n",
     "# inductive_dataset_train = inductive_dataset(balanced_train_df, TrainParams.UNSEEN_CLASSES)\n",
     "# inductive_dataset_val = inductive_dataset(balanced_train_df, TrainParams.SEEN_CLASSES)\n",
     "\n",
     "# print(len(inductive_dataset_train), len(inductive_dataset_val))\n",
     "\n",
-    "transductive_dataset_train = transductive_dataset(train_df, TrainParams.SEEN_CLASSES)\n",
-    "transductive_dataset_val = transductive_dataset(train_df, TrainParams.UNSEEN_CLASSES)\n",
+    "transductive_dataset_train = transductive_dataset(balanced_train_df, TrainParams.SEEN_CLASSES)\n",
+    "transductive_dataset_val = transductive_dataset(balanced_train_df, TrainParams.UNSEEN_CLASSES)\n",
     "\n",
     "print(len(transductive_dataset_train), len(transductive_dataset_val))\n",
     "\n",
@@ -314,8 +314,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of training images: 36847\n",
-      "Number of val images: 4560\n"
+      "Number of training images: 35012\n",
+      "Number of val images: 3388\n"
      ]
     }
    ],
@@ -402,7 +402,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc52e86cce5b419ab05e82500f1a3693",
+       "model_id": "7571154b6e8d419c9937fa2e720010eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -416,7 +416,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4c9027e41304c128cdfc2ff4f73a038",
+       "model_id": "d5fe5808ff0748cb80624693fc61610e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -430,7 +430,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b31f3e48db2146e184a4198eb3e56242",
+       "model_id": "012bc075b662494d84d10457a4d45d00",
        "version_major": 2,
        "version_minor": 0
       },
@@ -445,13 +445,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 0, global step 4606: 'val_iou' reached 0.23361 (best 0.23361), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=00-val_loss=0.372-val_iou=0.23.ckpt' as top 3\n"
+      "Epoch 0, global step 4377: 'val_iou' reached 0.11182 (best 0.11182), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_27\\\\checkpoints\\\\transformer-epoch=00-val_loss=0.472-val_iou=0.11.ckpt' as top 3\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79c4764dc6144790afb0c9255bd688a8",
+       "model_id": "23014d909e5d463ab6623888219d21e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -466,13 +466,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1, global step 9212: 'val_iou' reached 0.24829 (best 0.24829), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=01-val_loss=0.369-val_iou=0.25.ckpt' as top 3\n"
+      "Epoch 1, global step 8754: 'val_iou' reached 0.14373 (best 0.14373), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_27\\\\checkpoints\\\\transformer-epoch=01-val_loss=0.455-val_iou=0.14.ckpt' as top 3\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bee55fc38ec94c68b36f6c740f577b4a",
+       "model_id": "5ca863fb1e2a4df689675a7a2039f56c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -487,13 +487,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 2, global step 13818: 'val_iou' reached 0.26209 (best 0.26209), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=02-val_loss=0.358-val_iou=0.26.ckpt' as top 3\n"
+      "Epoch 2, global step 13131: 'val_iou' reached 0.12440 (best 0.14373), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_27\\\\checkpoints\\\\transformer-epoch=02-val_loss=0.483-val_iou=0.12.ckpt' as top 3\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df8c0f8726954f108c379f22eaa6c514",
+       "model_id": "886b3351c9284df18b35d2d1bfd1e94e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -508,13 +508,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 3, global step 18424: 'val_iou' reached 0.28276 (best 0.28276), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=03-val_loss=0.339-val_iou=0.28.ckpt' as top 3\n"
+      "Epoch 3, global step 17508: 'val_iou' reached 0.16942 (best 0.16942), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_27\\\\checkpoints\\\\transformer-epoch=03-val_loss=0.440-val_iou=0.17.ckpt' as top 3\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "664562f49f20429195b872184f7b2412",
+       "model_id": "6dfcff1bc39d46fd8e70a948a9c97636",
        "version_major": 2,
        "version_minor": 0
       },
@@ -529,13 +529,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 4, global step 23030: 'val_iou' reached 0.29395 (best 0.29395), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=04-val_loss=0.334-val_iou=0.29.ckpt' as top 3\n"
+      "Epoch 4, global step 21885: 'val_iou' was not in top 3\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "069c6fa37d274eaa8f28954b3644349b",
+       "model_id": "e5f2b37eaa17403d898aa25159a88b62",
        "version_major": 2,
        "version_minor": 0
       },
@@ -550,13 +550,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 5, global step 27636: 'val_iou' reached 0.29798 (best 0.29798), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=05-val_loss=0.343-val_iou=0.30.ckpt' as top 3\n"
+      "Epoch 5, global step 26262: 'val_iou' reached 0.13865 (best 0.16942), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_27\\\\checkpoints\\\\transformer-epoch=05-val_loss=0.477-val_iou=0.14.ckpt' as top 3\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98f29fd526e949e89228b446e01095dd",
+       "model_id": "d5964911ab96489c92c3e5e312a142a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -571,13 +571,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 6, global step 32242: 'val_iou' reached 0.28883 (best 0.29798), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=06-val_loss=0.342-val_iou=0.29.ckpt' as top 3\n"
+      "Epoch 6, global step 30639: 'val_iou' reached 0.15330 (best 0.16942), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_27\\\\checkpoints\\\\transformer-epoch=06-val_loss=0.467-val_iou=0.15.ckpt' as top 3\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cfdcb0a0dbba434bb00ef7a76588c088",
+       "model_id": "40375030f9bd4a7082e8912f769bf2b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -592,13 +592,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 7, global step 36848: 'val_iou' reached 0.30694 (best 0.30694), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=07-val_loss=0.338-val_iou=0.31.ckpt' as top 3\n"
+      "Epoch 7, global step 35016: 'val_iou' reached 0.15085 (best 0.16942), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_27\\\\checkpoints\\\\transformer-epoch=07-val_loss=0.482-val_iou=0.15.ckpt' as top 3\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42bcc7fb34e546518cf4a52aebb33ae5",
+       "model_id": "f459bc5c200d4f2fa92bdf24ed3a9dc6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -613,13 +613,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 8, global step 41454: 'val_iou' reached 0.31678 (best 0.31678), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=08-val_loss=0.329-val_iou=0.32.ckpt' as top 3\n"
+      "Epoch 8, global step 39393: 'val_iou' was not in top 3\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "563d8c891acc4e8bb4d0857ea31620a0",
+       "model_id": "9df0379e90a2429a95d713c6d90dde80",
        "version_major": 2,
        "version_minor": 0
       },
@@ -634,13 +634,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 9, global step 46060: 'val_iou' reached 0.32275 (best 0.32275), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=09-val_loss=0.335-val_iou=0.32.ckpt' as top 3\n"
+      "Epoch 9, global step 43770: 'val_iou' reached 0.15871 (best 0.16942), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_27\\\\checkpoints\\\\transformer-epoch=09-val_loss=0.489-val_iou=0.16.ckpt' as top 3\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29a7c65107cd4b03940ec7869c4ca0ae",
+       "model_id": "73106fe344a24264b57dd1c5de1fcbb2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -655,133 +655,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 10, global step 50666: 'val_iou' was not in top 3\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69ec92064f5543f3ae609ef277cf314e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 11, global step 55272: 'val_iou' was not in top 3\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9469354dc86d45f3bcc5ada7ab797451",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 12, global step 59878: 'val_iou' reached 0.31464 (best 0.32275), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=12-val_loss=0.330-val_iou=0.31.ckpt' as top 3\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ea00c4066e949c58ebf17ab28853c2b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 13, global step 64484: 'val_iou' reached 0.32239 (best 0.32275), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=13-val_loss=0.327-val_iou=0.32.ckpt' as top 3\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0034ba4476c74432887c6b45e20a5456",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 14, global step 69090: 'val_iou' was not in top 3\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dacb5b28fc484028bfbed40fc6442606",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 15, global step 73696: 'val_iou' was not in top 3\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da5acd0fbefc4e679576c1d57e15b52e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 16, global step 78302: 'val_iou' reached 0.32064 (best 0.32275), saving model to 'c:\\\\Users\\\\david\\\\OneDrive\\\\Documents\\\\GitHub\\\\TextualSegFormer\\\\lightning_logs\\\\version_23\\\\checkpoints\\\\transformer-epoch=16-val_loss=0.337-val_iou=0.32.ckpt' as top 3\n"
+      "Epoch 10, global step 48147: 'val_iou' was not in top 3\n"
      ]
     }
    ],
